force-app/main/default/objects/CustomObjAAA__c/CustomObjAAA__c.object-meta.xml
<CustomObject>
    <label>CustomObjAAA</label>
    <nameField>
        <label>CustomObjAAA Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>