force-app/main/default/objects/CustomObjAAA__c/fields/AAAA__c.field-meta.xml
<CustomField>
    <fullName>AAAA__c</fullName>
    <label>AAAA</label>
    <type>DateTime</type>
</CustomField>