force-app/main/default/objects/CustomObjAAA__c/fields/aaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>aaaaa</label>
    <type>Checkbox</type>
</CustomField>