force-app/main/default/objects/CustomObjAAA__c/fields/aaaaaa__c.field-meta.xml
<CustomField>
    <fullName>aaaaaa__c</fullName>
    <label>aaaaaa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>