force-app/main/default/objects/CustomObjAAA__c/fields/BBBB__c.field-meta.xml
<CustomField>
    <fullName>BBBB__c</fullName>
    <label>BBBB</label>
    <type>DateTime</type>
</CustomField>