force-app/main/default/objects/CustomObjAAA__c/fields/bbbbb__c.field-meta.xml
<CustomField>
    <fullName>bbbbb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bbbbb</label>
    <type>Checkbox</type>
</CustomField>