force-app/main/default/objects/CustomObjAAA__c/fields/bbbbbb__c.field-meta.xml
<CustomField>
    <fullName>bbbbbb__c</fullName>
    <label>bbbbbb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>